--- a/css/localcss.scss
+++ b/css/localcss.scss
@@ -35,7 +35,10 @@ body {
     top: 50%;
     left: 1%;
     transform: translateY(-50%);
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     .control {
         position: relative;
         width: 45px;
@@ -1072,3 +1075,5 @@ section {
     }
     }
 }
+
+@import './media';
