--- a/css/localcss.css
+++ b/css/localcss.css
@@ -1361,8 +1361,8 @@ section {
   header {
     padding: 0;
   }
-  section {
-    padding: 0;
+  .section {
+    padding: 0 0 5rem 0 !important;
   }
   .home .header-content {
     -ms-grid-columns: 1fr;
@@ -1377,17 +1377,25 @@ section {
     width: 100%;
     right: 0 !important;
     text-align: center !important;
+    font-size: 125%;
+  }
+  .home .header-content .left-header .name span {
+    font-size: 200%;
   }
   .home .header-content .left-header h1 {
     margin-bottom: o !important;
   }
   .home .header-content .left-header p {
     width: 100%;
+    padding: 0 0.5rem;
+    font-size: 90%;
+    margin-bottom: 0;
   }
   .home .header-content .left-header h3 {
     -ms-flex-item-align: end;
         align-self: flex-end;
     margin-right: 2rem;
+    font-size: 125%;
   }
   .home .header-content .left-header .btn-con {
     -ms-flex-item-align: center;
@@ -1401,6 +1409,7 @@ section {
   .controls {
     top: auto;
     bottom: 0;
+    padding-bottom: 0.7rem;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -1418,16 +1427,19 @@ section {
     background-color: var(--bgcol);
   }
   .controls .control {
-    margin: .5rem;
+    margin: 0.5rem;
   }
   .controls .float {
     display: none;
   }
-  .about {
-    padding: 2rem;
+  .about .main-title {
+    padding-top: 1rem;
   }
   .about .main-title h1 {
     font-size: 150% !important;
+  }
+  .about .main-title h1 .bgtxt {
+    font-size: 125%;
   }
   .about .about-container {
     -ms-grid-columns: 1fr;
@@ -1441,11 +1453,21 @@ section {
     font-size: 1.5rem;
   }
   .about .about-container .l-con h4 span {
-    font-size: 175%;
+    font-size: 150%;
+  }
+  .about .about-container .l-con p {
+    font-size: 90%;
+  }
+  .about .about-container .r-con {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .about .about-container .r-con .abt-item {
+    width: 100%;
   }
   .about .about-container .r-con .abt-item .abt-txt {
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1476,7 +1498,13 @@ section {
     padding: 0 1rem;
   }
   .about .quality-section .skill-table .skill-item {
-    padding: .5rem;
+    padding: 0.5rem;
+  }
+  .about .quality-section .skill-table .skill-item .skill-head {
+    font-size: 100%;
+  }
+  .about .quality-section .skill-table .skill-item .prgs-bar {
+    gap: 1rem;
   }
   .about .quality-section .passion {
     padding: 1.5rem 0;
@@ -1499,15 +1527,23 @@ section {
     font-size: 125% !important;
   }
   .about .quality-section .passion .passion-table .passion-item .desc {
-    font-size: 100% !important;
+    padding: 0.5rem 0;
+    font-size: 90% !important;
     margin-bottom: 0;
   }
+  .about .quality-section .passion .passion-table .passion-item .desc::before {
+    display: none;
+  }
   .about .timeline {
+    padding: 2rem;
     -ms-grid-columns: 1fr !important;
         grid-template-columns: 1fr !important;
   }
+  .about .timeline .tl-item .details {
+    font-size: 90%;
+  }
   .contact {
-    padding: 2rem;
+    padding: 2rem 1rem 7rem 1rem !important;
   }
   .contact .con-title h1 {
     font-size: 175%;
@@ -1523,9 +1559,15 @@ section {
   }
   .contact .con-body .right-con .contact-form {
     min-width: 15rem !important;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     width: 100%;
     padding: 0;
+  }
+  .contact .con-body .right-con .contact-form .seg2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .contact .con-body .right-con .contact-form .submit {
     width: 40%;
